--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - checkout
       - node/install-packages
       - run:
+          name: Run Lint checks
+          command: npm run lint
+      - run:
           name: Run tests
           command: npm test
 
