--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ version: 2.1
 orbs:
   node: circleci/node@4.1
 
-  
+
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:  
+  - check-lint:  
     docker:
       - image: cimg/node:15.1
     steps:
@@ -16,17 +16,10 @@ jobs:
       - run:
           name: Run Lint checks
           command: npm run lint
-      - run:
-          name: Run tests
-          command: npm test
 
 workflows:
-  # Below is the definition of your workflow.
-  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
-  # CircleCI will run this workflow on every commit.
-  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test
+      - check-lint
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
-      # - node/test
+      - node/test
