--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  - check-lint:  
+  check-lint:  
     docker:
       - image: cimg/node:15.1
     steps:
@@ -22,4 +22,4 @@ workflows:
     jobs:
       - check-lint
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
-      - node/test
+      # - node/test
