--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ workflows:
     jobs:
       - check-lint
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
-      # - node/test
+      - node/test
