--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,16 @@ version: 2.1
 orbs:
   node: circleci/node@4.1
 
-
-
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  check-lint:  
+  check-lint-and-test:  
     docker:
       - image: cimg/node:15.1
     steps:
       - checkout
-      - node/install-packages
+      - node/with-cache:
+        steps:
+          - run: npm ci
       - run:
           name: Run Lint checks
           command: npm run lint
