--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  check-lint-and-test:  
+  check-lint:  
     docker:
       - image: cimg/node:15.1
     steps:
